dependency and project structure update

--- a/package.json
+++ b/package.json
@@ -21,23 +21,30 @@
   },
   "homepage": "https://github.com/achung3071/BCHA-server#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.11"
+    "express-session": "^1.17.0",
+    "mongoose": "^5.7.11",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/express-session": "^1.15.15",
     "@types/jest": "^24.0.23",
     "@types/mongoose": "^5.5.31",
+    "@types/morgan": "^1.7.37",
+    "@types/passport": "^1.0.1",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "ts-node": "^8.5.2",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.2",
-    "winston": "^3.2.1"
+    "typescript": "^3.7.2"
   }
 }
