--- a/package.json
+++ b/package.json
@@ -32,16 +32,21 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/chai": "^4.2.5",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.15",
     "@types/jest": "^24.0.23",
+    "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.31",
     "@types/morgan": "^1.7.37",
     "@types/passport": "^1.0.1",
+    "chai": "^4.2.0",
     "jest": "^24.9.0",
+    "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
+    "ts-mocha": "^6.0.0",
     "ts-node": "^8.5.2",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
