updated testing options (jest)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p ."
@@ -32,21 +32,19 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/chai": "^4.2.5",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.15.15",
     "@types/jest": "^24.0.23",
-    "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.31",
     "@types/morgan": "^1.7.37",
     "@types/passport": "^1.0.1",
-    "chai": "^4.2.0",
+    "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
-    "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
-    "ts-mocha": "^6.0.0",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.5.2",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
