--- a/package.json
+++ b/package.json
@@ -21,17 +21,23 @@
   },
   "homepage": "https://github.com/achung3071/BCHA-server#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
-    "passport": "^0.4.0"
+    "node-schedule": "^1.3.2",
+    "passport": "^0.4.0",
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/cheerio": "^0.22.14",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
@@ -39,7 +45,9 @@
     "@types/jest": "^24.0.23",
     "@types/mongoose": "^5.5.31",
     "@types/morgan": "^1.7.37",
+    "@types/node-schedule": "^1.2.4",
     "@types/passport": "^1.0.1",
+    "@types/puppeteer": "^1.20.2",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
