--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.7.11",
+    "mongoose-paginate-v2": "^1.3.4",
     "morgan": "^1.9.1",
     "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
@@ -44,6 +45,7 @@
     "@types/express-session": "^1.15.15",
     "@types/jest": "^24.0.23",
     "@types/mongoose": "^5.5.31",
+    "@types/mongoose-paginate-v2": "^1.0.5",
     "@types/morgan": "^1.7.37",
     "@types/node-schedule": "^1.2.4",
     "@types/passport": "^1.0.1",
