--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node app.js",
+    "dev": "nodemon app.ts",
     "build": "tsc -p ."
   },
   "repository": {
