--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,6 @@
     "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "forceConsistentCasingInFileNames": false /* Disallow inconsistently-cased references to the same file. */,
-    "rootDir": "./src",
-    "outDir": "./dist"
+    "forceConsistentCasingInFileNames": false /* Disallow inconsistently-cased references to the same file. */
   }
 }
