--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/achung3071/BCHA-server#readme",
   "dependencies": {
+    "aws-sdk": "^2.578.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "cheerio": "^1.0.0-rc.3",
@@ -31,11 +32,14 @@
     "mongoose": "^5.7.11",
     "mongoose-paginate-v2": "^1.3.4",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-schedule": "^1.3.2",
     "passport": "^0.4.0",
     "puppeteer": "^2.0.0"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cheerio": "^0.22.14",
@@ -47,6 +51,8 @@
     "@types/mongoose": "^5.5.31",
     "@types/mongoose-paginate-v2": "^1.0.5",
     "@types/morgan": "^1.7.37",
+    "@types/multer": "^1.3.10",
+    "@types/multer-s3": "^2.7.7",
     "@types/node-schedule": "^1.2.4",
     "@types/passport": "^1.0.1",
     "@types/puppeteer": "^1.20.2",
