--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "mongoosastic": "^4.5.1",
     "mongoose": "^5.7.11",
     "mongoose-paginate-v2": "^1.3.4",
     "morgan": "^1.9.1",
