--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-schedule": "^1.3.2",
+    "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "puppeteer": "^2.0.0"
   },
@@ -52,6 +53,7 @@
     "@types/morgan": "^1.7.37",
     "@types/multer": "^1.3.10",
     "@types/multer-s3": "^2.7.7",
+    "@types/nodemailer": "^6.2.2",
     "@types/node-schedule": "^1.2.4",
     "@types/passport": "^1.0.1",
     "@types/puppeteer": "^1.20.2",
