--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/achung3071/BCHA-server#readme",
   "dependencies": {
     "@elastic/elasticsearch": "^7.4.0",
+    "@types/passport-facebook": "^2.1.9",
     "aws-sdk": "^2.578.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
@@ -37,7 +38,9 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
-    "puppeteer": "^2.0.0"
+    "passport-facebook": "^3.0.0",
+    "puppeteer": "^2.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
@@ -57,6 +60,7 @@
     "@types/node-schedule": "^1.2.4",
     "@types/passport": "^1.0.1",
     "@types/puppeteer": "^1.20.2",
+    "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
