--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
+    "passport-kakao": "^1.0.0",
     "puppeteer": "^2.0.0",
     "socket.io": "^2.3.0"
   },
@@ -55,10 +56,11 @@
     "@types/morgan": "^1.7.37",
     "@types/multer": "^1.3.10",
     "@types/multer-s3": "^2.7.7",
-    "@types/nodemailer": "^6.2.2",
     "@types/node-schedule": "^1.2.4",
+    "@types/nodemailer": "^6.2.2",
     "@types/passport": "^1.0.1",
     "@types/passport-facebook": "^2.1.9",
+    "@types/passport-kakao": "^0.2.0",
     "@types/puppeteer": "^1.20.2",
     "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
