--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "cheerio": "^1.0.0-rc.3",
+    "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -47,6 +48,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cheerio": "^0.22.14",
+    "@types/connect-mongo": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
